Fixed padding for map iframe on mobile about page

--- a/css/main.css
+++ b/css/main.css
@@ -393,7 +393,7 @@ input[type=button] {
 .map figure {
   width: 100%;
   height: 0;
-  padding-bottom: 125%;
+  padding-bottom: 55%;
   overflow: hidden;
   position: relative;
 }
